Add hello world

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
+<!doctype html>
 <html>
+	<head>
+		<title>Hello, world!</tilte
+	</head>
+	<body>
+		<h1>Who are you?</h1>
+		<div>paragraph</div>
+	</body>
 </html>
